added extensions refactoring design
Took 1 hour 59 minutes

--- a/app/src/main/res/layout/activity_comments.xml
+++ b/app/src/main/res/layout/activity_comments.xml
@@ -10,7 +10,7 @@
 
     <TextView
         android:id="@+id/activity_usercomments_tv_empty"
-        style="@style/infoText"
+        style="@style/InfoText"
         android:text="Нет комментариев"
         app:layout_constraintBottom_toTopOf="@+id/top_panel"
         app:layout_constraintEnd_toEndOf="parent"
