--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,7 +26,7 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="logInPage">
+    <style name="LogInPage">
         <item name="colorControlActivated">@color/white</item>
         <item name="android:background">@color/mainBlue</item>
         <item name="android:layout_width">match_parent</item>
@@ -35,28 +35,28 @@
 
     <!-- TEXT -->
 
-    <style name="profileText">
+    <style name="ProfileText">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">16sp</item>
     </style>
 
-    <style name="profileMediumText" parent="profileText">
+    <style name="ProfileMediumText" parent="ProfileText">
         <item name="fontFamily">@font/roboto_medium</item>
         <item name="android:textColor">@color/white</item>
     </style>
 
-    <style name="profileThinText" parent="profileText">
+    <style name="ProfileThinText" parent="ProfileText">
         <item name="fontFamily">@font/roboto_thin</item>
         <item name="android:textColor">@color/white80</item>
     </style>
 
-    <style name="extraText">
+    <style name="ExtraText">
         <item name="android:textColor">@color/white50</item>
         <item name="android:gravity">center</item>
     </style>
 
-    <style name="topTitleText">
+    <style name="TopTitleText">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/white</item>
@@ -65,7 +65,7 @@
         <item name="fontFamily">@font/roboto_bold</item>
     </style>
 
-    <style name="materialInputLayout">
+    <style name="MaterialInputLayout">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginStart">25dp</item>
@@ -76,7 +76,7 @@
         <item name="fontFamily">@font/roboto_medium</item>
     </style>
 
-    <style name="materialLoginInputLayout" parent="materialInputLayout">
+    <style name="MaterialLoginInputLayout" parent="MaterialInputLayout">
         <item name="boxStrokeColor">@color/selector_white</item>
         <item name="boxBackgroundColor">@color/mainBlue</item>
         <item name="android:textColorHint">@color/white50</item>
@@ -84,17 +84,17 @@
         <item name="hintTextColor">@color/white</item>
     </style>
 
-    <style name="materialInput">
+    <style name="MaterialInput">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:maxLines">1</item>
     </style>
 
-    <style name="materialLoginInput" parent="materialInput">
+    <style name="MaterialLoginInput" parent="MaterialInput">
         <item name="android:textColor">@color/white</item>
     </style>
 
-    <style name="materialSpinnerLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
+    <style name="MaterialSpinnerLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginStart">25dp</item>
@@ -104,7 +104,7 @@
         <item name="boxBackgroundColor">@color/white50</item>
     </style>
 
-    <style name="materialSpinner">
+    <style name="MaterialSpinner">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:inputType">none</item>
@@ -114,18 +114,18 @@
         <item name="fontFamily">@font/roboto_medium</item>
     </style>
 
-    <style name="materialLoginSpinnerLayout" parent="materialSpinnerLayout">
+    <style name="MaterialLoginSpinnerLayout" parent="MaterialSpinnerLayout">
         <item name="startIconTint">@color/white50</item>
         <item name="boxBackgroundColor">@color/mainBlue</item>
         <item name="boxStrokeColor">@color/selector_white</item>
         <item name="endIconTint">@color/white</item>
     </style>
 
-    <style name="materialLoginSpinner" parent="materialSpinner">
+    <style name="MaterialLoginSpinner" parent="MaterialSpinner">
         <item name="android:textColor">@color/white</item>
     </style>
 
-    <style name="infoText">
+    <style name="InfoText">
         <item name="android:textSize">20sp</item>
         <item name="android:fontFamily">@font/roboto_medium</item>
         <item name="android:textColor">@color/darkBlue</item>
@@ -134,8 +134,7 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
-
-    <style name="serviceBodyText">
+    <style name="ServiceBodyText">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">@dimen/default_margin</item>
@@ -400,7 +399,7 @@
         <item name="android:colorForeground">@android:color/darker_gray</item>
     </style>
 
-    <style name="loginPackageText">
+    <style name="LoginPackageText">
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:layout_width">match_parent</item>
@@ -408,20 +407,20 @@
         <item name="android:gravity">center</item>
     </style>
 
-    <style name="loginPackageLinearLayout">
+    <style name="LoginPackageLinearLayout">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center</item>
     </style>
 
-    <style name="loginPackageMainLinearLayout">
+    <style name="LoginPackageMainLinearLayout">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">0dp</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:orientation">vertical</item>
     </style>
 
-    <style name="loginInput">
+    <style name="LoginInput">
         <item name="android:layout_width">220dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">18sp</item>
@@ -431,7 +430,7 @@
         <item name="android:maxLines">1</item>
     </style>
 
-    <style name="loginSpinnerElement">
+    <style name="LoginSpinnerElement">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">18sp</item>
@@ -440,12 +439,12 @@
         <item name="android:maxLines">1</item>
     </style>
 
-    <style name="loginSpinner">
+    <style name="LoginSpinner">
         <item name="android:layout_width">220dp</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
 
-    <style name="lightBlueButton" parent="baseButton">
+    <style name="LightBlueButton" parent="baseButton">
         <item name="fontFamily">@font/font_awesome_solid</item>
         <item name="android:background">@drawable/item_unselected</item>
         <item name="android:layout_marginTop">2dp</item>
