--- a/app/src/main/res/layout/activity_authorization.xml
+++ b/app/src/main/res/layout/activity_authorization.xml
@@ -2,52 +2,73 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/logInPage"
+    style="@style/LogInPage"
     android:gravity="center"
     android:orientation="vertical"
     tools:context="com.bunbeauty.ideal.myapplication.clean_architecture.mvp.activities.log_in.AuthorizationActivity">
 
-    <LinearLayout
-        style="@style/wideHorizontalBlock"
-        android:baselineAligned="false">
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/activity_authorization_til_code"
-            style="@style/materialLoginSpinnerLayout"
-            android:layout_width="wrap_content"
-            android:layout_marginEnd="3dp"
-            app:startIconDrawable="@drawable/icon_phone_number">
-
-            <AutoCompleteTextView
-                android:id="@+id/activity_authorization_sp_code"
-                style="@style/materialLoginSpinner" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/materialLoginInputLayout"
-            android:layout_width="0dp"
-            android:layout_marginStart="3dp"
-            android:layout_weight="1"
-            android:hint="@string/phone">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/activity_authorization_et_phone"
-                style="@style/materialLoginInput"
-                android:inputType="number" />
-        </com.google.android.material.textfield.TextInputLayout>
-    </LinearLayout>
-
-    <ProgressBar
-        android:id="@+id/activity_authorization_pb_loading"
+    <ImageView
+        android:id="@+id/activity_authorization_iv_logo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:indeterminateTint="@color/white"
-        android:paddingTop="48dp" />
+        android:layout_marginTop="@dimen/top_logo_margin"
+        app:srcCompat="@drawable/bun_beauty" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/activity_authorization_btn_login"
-        style="@style/loginButton"
-        android:text="Войти" />
+    <LinearLayout
+        android:id="@+id/activity_authorization_ll_main"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <LinearLayout
+            style="@style/wideHorizontalBlock"
+            android:baselineAligned="false">
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/activity_authorization_til_code"
+                style="@style/MaterialLoginSpinnerLayout"
+                android:layout_width="wrap_content"
+                android:layout_marginEnd="3dp"
+                app:startIconDrawable="@drawable/icon_phone_number">
+
+                <AutoCompleteTextView
+                    android:id="@+id/activity_authorization_sp_code"
+                    style="@style/MaterialLoginSpinner" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/MaterialLoginInputLayout"
+                android:layout_width="0dp"
+                android:layout_marginStart="3dp"
+                android:layout_weight="1"
+                android:hint="@string/phone">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/activity_authorization_et_phone"
+                    style="@style/MaterialLoginInput"
+                    android:inputType="number" />
+            </com.google.android.material.textfield.TextInputLayout>
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        style="@style/wideVerticalBlock"
+        android:layout_marginBottom="@dimen/default_bottom_button_margin"
+        android:gravity="center">
+
+        <ProgressBar
+            android:id="@+id/activity_authorization_pb_loading"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:indeterminateTint="@color/white" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/activity_authorization_btn_login"
+            style="@style/loginButton"
+            android:text="Войти" />
+    </LinearLayout>
 
 </LinearLayout>
