--- a/app/src/main/res/layout/activity_creation_service.xml
+++ b/app/src/main/res/layout/activity_creation_service.xml
@@ -28,56 +28,56 @@
                 android:orientation="vertical">
 
                 <com.google.android.material.textfield.TextInputLayout
-                    style="@style/materialInputLayout"
+                    style="@style/MaterialInputLayout"
                     android:hint="@string/nameAddServiceTB"
                     app:startIconDrawable="@drawable/icon_profile">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/activity_creation_service_et_name"
-                        style="@style/materialInput"
+                        style="@style/MaterialInput"
                         android:inputType="textCapSentences" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
-                    style="@style/materialInputLayout"
+                    style="@style/MaterialInputLayout"
                     android:hint="@string/cost"
                     app:startIconDrawable="@drawable/icon_dollar_sign_solid">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/activity_creation_service_et_cost"
-                        style="@style/materialInput"
+                        style="@style/MaterialInput"
                         android:inputType="number" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
-                    style="@style/materialInputLayout"
+                    style="@style/MaterialInputLayout"
                     android:hint="@string/address"
                     app:startIconDrawable="@drawable/icon_map_marked_solid">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/activity_creation_service_et_address"
-                        style="@style/materialInput"
+                        style="@style/MaterialInput"
                         android:inputType="textCapSentences" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
-                    style="@style/materialInputLayout"
+                    style="@style/MaterialInputLayout"
                     android:hint="@string/description"
                     app:startIconDrawable="@drawable/icon_file_alt_regular">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/activity_creation_service_et_description"
-                        style="@style/materialInput"
+                        style="@style/MaterialInput"
                         android:inputType="textMultiLine|textCapSentences"
                         android:maxLines="10" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <LinearLayout
-                    style="@style/materialInputLayout"
+                    style="@style/MaterialInputLayout"
                     android:gravity="center">
 
                     <ImageView
