--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -112,7 +112,7 @@
 
     <TextView
         android:id="@+id/activity_main_screen_tv_empty"
-        style="@style/infoText"
+        style="@style/InfoText"
         android:gravity="center"
         android:text="@string/no_services_in_your_region"
         app:layout_constraintBottom_toTopOf="parent"
