--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -2,90 +2,104 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/logInPage"
     android:id="@+id/activity_registration_ll"
+    style="@style/LogInPage"
     android:gravity="center"
     android:orientation="vertical"
     tools:context="com.bunbeauty.ideal.myapplication.clean_architecture.mvp.activities.log_in.RegistrationActivity">
 
-    <!--<ImageView
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/bun_beauty" />-->
+        android:layout_marginTop="@dimen/top_logo_margin"
+        app:srcCompat="@drawable/bun_beauty" />
 
     <LinearLayout
-        style="@style/loginPackageLinearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center"
         android:orientation="vertical">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/phoneRegistrationInputLayout"
-            style="@style/materialLoginInputLayout"
-            android:hint="@string/phone"
-            app:startIconDrawable="@drawable/icon_phone_number">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/phoneRegistrationInput"
-                style="@style/materialLoginInput"
-                android:enabled="false"
-                android:focusable="false"
-                android:inputType="number"
-                android:textColor="@color/white50" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/nameRegistrationInputLayout"
-            style="@style/materialLoginInputLayout"
-            android:hint="@string/name"
-            app:startIconDrawable="@drawable/icon_profile">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/nameRegistrationInput"
-                style="@style/materialLoginInput"
-                android:inputType="textPersonName|textCapSentences" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/surnameRegistrationInputLayout"
-            style="@style/materialLoginInputLayout"
-            android:hint="@string/surname"
-            app:startIconDrawable="@drawable/icon_profile">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/surnameRegistrationInput"
-                style="@style/materialLoginInput"
-                android:inputType="textPersonName|textCapSentences" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
         <LinearLayout
-            style="@style/wideHorizontalBlock"
-            android:gravity="center">
+            style="@style/LoginPackageLinearLayout"
+            android:orientation="vertical">
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/cityRegistrationInputLayout"
-                style="@style/materialLoginSpinnerLayout"
-                app:startIconDrawable="@drawable/icon_city">
+                android:id="@+id/phoneRegistrationInputLayout"
+                style="@style/MaterialLoginInputLayout"
+                android:hint="@string/phone"
+                app:startIconDrawable="@drawable/icon_phone_number">
 
-                <AutoCompleteTextView
-                    android:id="@+id/cityRegistrationSpinner"
-                    style="@style/materialLoginSpinner"
-                    android:text="@string/city" />
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/activity_registration_et_phone"
+                    style="@style/MaterialLoginInput"
+                    android:enabled="false"
+                    android:focusable="false"
+                    android:inputType="number"
+                    android:textColor="@color/white50" />
 
             </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/nameRegistrationInputLayout"
+                style="@style/MaterialLoginInputLayout"
+                android:hint="@string/name"
+                app:startIconDrawable="@drawable/icon_profile">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/activity_registration_et_name"
+                    style="@style/MaterialLoginInput"
+                    android:inputType="textPersonName|textCapSentences" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/surnameRegistrationInputLayout"
+                style="@style/MaterialLoginInputLayout"
+                android:hint="@string/surname"
+                app:startIconDrawable="@drawable/icon_profile">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/activity_registration_et_surname"
+                    style="@style/MaterialLoginInput"
+                    android:inputType="textPersonName|textCapSentences" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <LinearLayout
+                style="@style/wideHorizontalBlock"
+                android:gravity="center">
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/activity_registration_et_city"
+                    style="@style/MaterialLoginSpinnerLayout"
+                    app:startIconDrawable="@drawable/icon_city">
+
+                    <AutoCompleteTextView
+                        android:id="@+id/cityRegistrationSpinner"
+                        style="@style/MaterialLoginSpinner"
+                        android:text="@string/city" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
-    <ProgressBar
-        android:id="@+id/activity_registration_pb_loading"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:indeterminateTint="@color/white"
-        android:paddingTop="48dp" />
+    <LinearLayout
+        style="@style/wideVerticalBlock"
+        android:layout_marginBottom="@dimen/default_bottom_button_margin"
+        android:gravity="center">
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/activity_registration_btn_register"
-        style="@style/loginButton"
-        android:text="сохранить данные" />
+        <ProgressBar
+            android:id="@+id/activity_registration_pb_loading"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:indeterminateTint="@color/white" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/activity_registration_btn_register"
+            style="@style/loginButton"
+            android:text="сохранить данные" />
+    </LinearLayout>
 </LinearLayout>
