--- a/app/src/main/res/layout/activity_service_comments.xml
+++ b/app/src/main/res/layout/activity_service_comments.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:id="@+id/activity_servicecomments_tv_empty"
-        style="@style/infoText"
+        style="@style/InfoText"
         android:text="Нет комментариев"
         app:layout_constraintBottom_toTopOf="@+id/top_panel"
         app:layout_constraintEnd_toEndOf="parent"
