--- a/app/src/main/res/layout/activity_subscriptions.xml
+++ b/app/src/main/res/layout/activity_subscriptions.xml
@@ -24,7 +24,7 @@
 
     <TextView
         android:id="@+id/activity_subscriptions_tv_empty"
-        style="@style/infoText"
+        style="@style/InfoText"
         android:layout_gravity="center"
         android:text="Нет подписок" />
 
