--- a/app/src/main/res/layout/activity_verify_phone_number.xml
+++ b/app/src/main/res/layout/activity_verify_phone_number.xml
@@ -3,90 +3,104 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/verifyPhoneNumberLayout"
-    style="@style/logInPage"
+    style="@style/LogInPage"
     android:gravity="center"
     android:orientation="vertical"
     tools:context="com.bunbeauty.ideal.myapplication.clean_architecture.mvp.activities.log_in.VerifyPhoneNumberActivity">
 
-    <!--<ImageView
+    <ImageView
         android:id="@+id/logoVerifyImage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        app:srcCompat="@drawable/bun_beauty" />-->
-
-    <com.google.android.material.textfield.TextInputLayout
-        style="@style/materialLoginInputLayout"
-        android:hint="@string/phone"
-        app:startIconDrawable="@drawable/icon_phone_number">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/phoneVerifyPhoneInput"
-            style="@style/materialLoginInput"
-            android:enabled="false"
-            android:focusable="false"
-            android:inputType="number"
-            android:textColor="@color/white50" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <TextView
-        android:id="@+id/changePhoneVerifyPhoneText"
-        style="@style/loginPackageText"
-        android:text="@string/change_number" />
-
-    <TextView
-        android:id="@+id/alertCodeVerifyText"
-        style="@style/extraText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="На указанный номер \n был отправлен код подтверждения" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        style="@style/materialLoginInputLayout"
-        android:hint="Код"
-        app:startIconDrawable="@drawable/icon_sms_code">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/codeVerifyPhoneInput"
-            style="@style/materialLoginInput"
-            android:inputType="number" />
-
-    </com.google.android.material.textfield.TextInputLayout>
+        android:layout_marginTop="@dimen/top_logo_margin"
+        app:srcCompat="@drawable/bun_beauty" />
 
     <LinearLayout
-        style="@style/wideHorizontalBlock"
-        android:layout_marginTop="10dp">
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:orientation="vertical">
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/MaterialLoginInputLayout"
+            android:hint="@string/phone"
+            app:startIconDrawable="@drawable/icon_phone_number">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/phoneVerifyPhoneInput"
+                style="@style/MaterialLoginInput"
+                android:enabled="false"
+                android:focusable="false"
+                android:inputType="number"
+                android:textColor="@color/white50" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
-            style="@style/extraText"
+            android:id="@+id/changePhoneVerifyPhoneText"
+            style="@style/LoginPackageText"
+            android:text="@string/change_number" />
+
+        <TextView
+            android:id="@+id/alertCodeVerifyText"
+            style="@style/ExtraText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="5dp"
-            android:layout_weight="1"
-            android:gravity="end"
-            android:text="Не получили sms?" />
+            android:layout_marginTop="20dp"
+            android:text="На указанный номер \n был отправлен код подтверждения" />
 
-        <TextView
-            android:id="@+id/resendCodeVerifyPhoneText"
-            style="@style/loginPackageText"
-            android:layout_marginStart="5dp"
-            android:layout_weight="1"
-            android:gravity="start"
-            android:text="@string/resendCode" />
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/MaterialLoginInputLayout"
+            android:hint="Код"
+            app:startIconDrawable="@drawable/icon_sms_code">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/codeVerifyPhoneInput"
+                style="@style/MaterialLoginInput"
+                android:inputType="number" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <LinearLayout
+            style="@style/wideHorizontalBlock"
+            android:layout_marginTop="10dp">
+
+            <TextView
+                style="@style/ExtraText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="5dp"
+                android:layout_weight="1"
+                android:gravity="end"
+                android:text="Не получили sms?" />
+
+            <TextView
+                android:id="@+id/resendCodeVerifyPhoneText"
+                style="@style/LoginPackageText"
+                android:layout_marginStart="5dp"
+                android:layout_weight="1"
+                android:gravity="start"
+                android:text="@string/resendCode" />
+        </LinearLayout>
     </LinearLayout>
 
-    <ProgressBar
-        android:id="@+id/activity_verify_phone_number_pb_loading"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:indeterminateTint="@color/white"
-        android:paddingTop="48dp" />
+    <LinearLayout
+        style="@style/wideVerticalBlock"
+        android:layout_marginBottom="@dimen/default_bottom_button_margin"
+        android:gravity="center">
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/verifyVerifyPhoneBtn"
-        style="@style/loginButton"
-        android:text="Войти" />
+        <ProgressBar
+            android:id="@+id/activity_verify_phone_number_pb_loading"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:indeterminateTint="@color/white" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/activity_verify_phone_number_btn_log_in"
+            style="@style/loginButton"
+            android:text="Войти" />
+    </LinearLayout>
 
 </LinearLayout>
