--- a/app/src/main/res/layout/fragment_premium.xml
+++ b/app/src/main/res/layout/fragment_premium.xml
@@ -63,13 +63,13 @@
         android:orientation="vertical">
 
         <com.google.android.material.textfield.TextInputLayout
-            style="@style/materialInputLayout"
+            style="@style/MaterialInputLayout"
             android:hint="Код"
             app:startIconDrawable="@drawable/icon_file_alt_regular">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/codePremiumElement"
-                style="@style/materialInput"
+                style="@style/MaterialInput"
                 android:inputType="textMultiLine|textCapSentences"
                 android:maxLines="10" />
 
